# synophotos

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  mkdocs.yaml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
docs/: cli.md  index.md  requirements.txt  usage.md
synophotos/: __init__.py  __main__.py  cache.py  cli.py  error_codes.py  exif.py  fsio.py  photos.py  ui.py  webapi.py  webservice.py
synophotos/parameters/: photos.py
test/: conftest.py  test_cli.py  testconfig_sample.yaml
