[project]
name = "synophotos"
authors = [{ name = "fortysix2ahead", email = "fortysix2ahead@gmail.com" }]
maintainers = [{ name = "fortysix2ahead", email = "fortysix2ahead@gmail.com" }]
version = "0.1.0"
description = "CLI Client for Synology Photos"
readme = "README.md"
keywords = ["synology", "photos"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
requires-python = ">=3.9"
dependencies = [
  'attrs ~= 23.1.0',
  'cattrs ~= 23.1.2',
  'click ~= 8.1.7',
  'fs ~= 2.4.16',
  'platformdirs ~= 3.11.0',
  'pyyaml ~= 6.0.1',
  'requests ~= 2.31.0',
  'rich ~= 13.6.0',
]

[project.optional-dependencies]
recommended = [
  "mkdocs~=1.5.3",
  "mkdocs-click~=0.8.1",
  "mkdocs-material~=9.4.7"
]

[project.urls]
"Source Code" = "https://github.com/fortysix2ahead/synophotos/"
"Issue Tracker" = "https://github.com/fortysix2ahead/synophotos/issues/"

[project.scripts]
synophotos = "synophotos.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
