[project]
name = "synophotos"
authors = [{ name = "fortysix2ahead", email = "fortysix2ahead@gmail.com" }]
maintainers = [{ name = "fortysix2ahead", email = "fortysix2ahead@gmail.com" }]
version = "0.2.3"
description = "Command Line Interface Client for Synology Photos"
readme = "README.md"
keywords = ["synology", "photos", "terminal", "cli", "command line"]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
  'attrs >= 23.1,< 23.3',
  'cattrs >= 23.1.2,< 23.3.0',
  'click ~= 8.1.7',
  'exif ~= 1.6.0',
  'fs ~= 2.4.16',
  'more-itertools ~= 10.1.0',
  'platformdirs ~= 4.0.0',
  'pyyaml ~= 6.0.1',
  'requests ~= 2.31.0',
  'rich >= 13.6,< 13.8',
  'typing_extensions ~= 4.8.0',
]

[project.optional-dependencies]
dev = [
  "bumpver~=2023.1129",
  "flit~=3.9.0",
  "mkdocs~=1.5.3",
  "mkdocs-click~=0.8.1",
  "mkdocs-material~=9.4.7"
]

[project.urls]
"Homepage" = "https://github.com/fortysix2ahead/synophotos/"
"Source Code" = "https://github.com/fortysix2ahead/synophotos/"
"Issue Tracker" = "https://github.com/fortysix2ahead/synophotos/issues/"
Documentation = "https://synophotos.readthedocs.io/"
Source = "https://github.com/fortysix2ahead/synophotos/"

[project.scripts]
synophotos = "synophotos.cli:main"

# [build-system]
# requires = ["setuptools>=61.0.0", "wheel"]
# build-backend = "setuptools.build_meta"
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.bumpver]
current_version = "0.2.3"
version_pattern = "MAJOR.MINOR.PATCH[-INC0]"
commit_message = "Increased version from {old_version} to {new_version}"
tag_message = "rel-{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
# "setup.py" = ["{version}", "{pep440_version}", ]
# "README.md" = ["{version}", "{pep440_version}",]
"synophotos/__init__.py" = [ '{version}' ]
